k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peoplecore-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
#    nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
spec:
  tls:
    - hosts:
        - server.peoplecore.cloud
      #        - https.yml의 metadata name
      secretName: server-peoplecore-tls
  rules:
    - host: server.peoplecore.cloud # 설정하려는 도메인 이름.
      http:
        paths:
          #          - 모놀리식이면 사실상 하나의 서비스로 사용
          - path: /
            # - path: /bradkim1/ #bradkim1으로 시작하는 모든 url요청을 my-service로 라우팅한다는 정규표현식
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
        # - path: /bradkim2/ #bradkim2으로 시작하는 모든 url요청을 my-service2로 라우팅한다는 정규표현식
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: my-service2
        #       port:
        #         number: 80
